<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1A1A"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:elevation="5dp"
        android:padding="8dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#252525"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/inriasans_bold"
                android:gravity="center_horizontal"
                android:textAllCaps="true"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/inriasans_bolditalic"
                android:text="@string/Enter_details"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name_edit_text_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:drawableEnd="@drawable/ic_person_black_24dp"
                android:fontFamily="@font/inriasansight"
                android:hint="@string/Enter_name"
                android:inputType="text"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/email_edit_text_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:drawableEnd="@drawable/ic_email_black_24dp"
                android:fontFamily="@font/inriasansight"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/password_edit_text_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:drawableEnd="@drawable/ic_lock_black_24dp"
                android:fontFamily="@font/inriasansight"
                android:hint="@string/Enter_password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/re_password_edit_text_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:drawableEnd="@drawable/ic_lock_black_24dp"
                android:fontFamily="@font/inriasansight"
                android:hint="@string/Re_enter_password"
                android:inputType="textPassword"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/phone_edit_text_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:drawableEnd="@drawable/ic_phone_black_24dp"
                android:fontFamily="@font/inriasansight"
                android:hint="@string/Enter_phone_number"
                android:inputType="phone"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/dob_edit_text_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:drawableEnd="@drawable/ic_today_black_24dp"
                android:fontFamily="@font/inriasansight"
                android:hint="@string/Enter_DOB"
                android:inputType="text"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/inriasans_bold"
                    android:text="@string/Gender"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inriasansight"
                    android:text="@string/Male"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:fontFamily="@font/inriasansight"
                    android:text="@string/Female"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RadioGroup>

            <Button
                android:id="@+id/create_account_login"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_gradient_style"
                android:fontFamily="@font/inriasans_bold"
                android:text="@string/Create_Account"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:elevation="5dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>