<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1A1A"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/skip_btn_id"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:gravity="center"
            android:layout_marginEnd="24dp"
            android:text="@string/skip_btn"
            android:fontFamily="@font/inriasans_bold"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:background="#252525"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#252525"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/inriasans_bold"
                    android:gravity="center"
                    android:text="@string/login_to_your_account"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/inriasans_bolditalic"
                    android:text="@string/enter_email"
                    android:textColor="#FFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/email_edit_text_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:drawableEnd="@drawable/ic_email_black_24dp"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/inriasansight"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/inriasans_bolditalic"
                    android:text="@string/enter_password"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/password_edit_text_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:drawableEnd="@drawable/ic_lock_black_24dp"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/inriasansight"
                    android:hint="@string/password"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:textColorHint="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/inriasans_bolditalic"
                    android:paddingEnd="30dp"
                    android:paddingStart="30dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/log_in_button"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_gradient_style"
                    android:fontFamily="@font/inriasans_bold"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:elevation="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="6dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:fontFamily="@font/inriasans_regular"
                        android:text="@string/need_account"
                        android:textColor="@color/white"
                        android:layout_marginStart="10dp"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/create_account_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/inriasans_bolditalic"
                        android:text="@string/create_account"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>

